@@ -93,6 +93,9 @@
  - (djm) [openbsd-compat/regress/snprintftest.c]
    [openbsd-compat/regress/strduptest.c] Add missing includes so they pass
    compilation with "-Wall -Werror"
+ - (djm) [auth-pam.c auth-shadow.c auth2-none.c cleanup.c sshd.c]
+   [openbsd-compat/port-tun.c openbsd-compat/port-tun.h] Sprinkle more
+   includes for Linux in
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
@@ -5163,4 +5166,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4457 2006/08/05 03:27:29 djm Exp $
+$Id: ChangeLog,v 1.4458 2006/08/05 04:07:20 djm Exp $
